
include_directories(TarsComm/src)
include_directories(Utils/src)
include_directories(Engine/src)
include_directories(Parser/src)

add_subdirectory(WorkServer/src)
add_subdirectory(TarsComm/src)
add_subdirectory(Utils/src)
add_subdirectory(Engine/src)
add_subdirectory(Grammar/src)
add_subdirectory(Parser/src)
